# livrarialip

./: .env.example  .gitignore  db.sqlite3  livraria.json  livraria_bkp.json  pyproject.toml  requirements.txt
core/: admin.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_editora.py  0002_livro_capa.py  0003_alter_autor_email.py  0003_autor_livro.py  0004_livro_autores.py
core/models/: livro.py
core/views/: __init__.py
livraria/: settings.py  urls.py
